# videonode

./: .air.toml  .dockerignore  .gitignore  .golangci.reference.md  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Dockerfile.arm64  LICENSE  README.md  build-arm64.sh  config.example.toml  config.toml  doc.go  go.mod  go.sum  install.sh  main.go  mediamtx.yml  process-compose.yaml  streams.toml  validated_encoders.toml
.claude/: cclsp.json
.github/workflows/: build.yml  ci-go.yml  ci-ui.yml  ci.yml  lint.yml  release.yml
cmd/: doc.go  stream.go  validate.go
docs/: nats-research.md
docs/issues/: hdmi-signal-detection.md
internal/api/: audio.go  cors.go  devices.go  doc.go  encoders.go  events.go  events.go.bak  events_test.go  leds.go  logs.go  metrics.go  middleware.go  obs_adapter.go  options.go  server.go  sse_integration_test.go  streams.go  streams_test.go  systemd.go  update.go
internal/audio/: detector.go  detector_linux.go  detector_other.go  doc.go
internal/capture/: capture.go  doc.go
internal/config/: config.go  config_test.go  doc.go  streams.go  watcher.go  watcher_test.go
internal/devices/: detector.go  detector_darwin.go  detector_linux.go  doc.go  resolve_device.go
internal/encoders/: api_codec_mapper.go  api_codec_mapper_test.go  codec.go  doc.go  encoders.go  registry.go  selector.go  validation.go
internal/events/: bus.go  bus_test.go  doc.go  sse.go  types.go
internal/ffmpeg/: builder.go  doc.go  log_parser.go  log_parser_test.go  options.go  options_test.go  params.go
internal/led/: controller.go  controller_test.go  doc.go  factory.go  factory_test.go  manager.go  manager_test.go  noop.go  sysfs.go
internal/logging/: buffer.go  buffer_handler.go  doc.go  journal_handler.go  logger.go  logger_test.go  multi_handler.go
internal/mediamtx/: client.go  command_test.go  config.go  config_test.go  doc.go
internal/metrics/: ffmpeg.go  ffmpeg_test.go  mpp.go  mpp_test.go
internal/monitoring/: mediamtx.go  socket_listener.go  udev.go
internal/nats/: bridge.go  client.go  client_test.go  doc.go  messages.go  server.go
internal/obs/: README.md  collector.go  doc.go  errors.go  manager.go  store.go  types.go
internal/process/: doc.go  manager.go  manager_test.go  pool.go  pool_options.go  pool_test.go  process.go  process_test.go  state.go
internal/server/: encoder_cache.go  encoders.go  handlers.go  models.go  obs_integration.go  routes.go  server.go  stream_handlers.go
internal/sse/: charts.go  manager.go  monitoring.go
internal/streaming/: api.go  h264_stream.go  h264_stream_test.go  hub.go  hub_test.go  server.go  webrtc.go  webrtc_api.go  webrtc_metrics.go
ui/: README.md  embed.go  embed_fallback.go  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: index.css  (+5 more)
v4l2_detector/: CMakeLists.txt  README.md  build.sh  doc.go  v4l2detector.go
v4l2_detector/src/: config.h.in  main.c  v4l2_controls.c  v4l2_detector.h  v4l2_device.c  v4l2_formats.c  v4l2_signal.c  v4l2_utils.c  v4l2_utils.h
(+171 files in other folders)
